Show grant type in projects list
